[package]
name = "rust-tune"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["tokio", "image"] }

# Audio
rodio = { version = "0.22.1", default-features = false, features = ["symphonia-all"] }
symphonia = { version = "0.5", features = ["mp3", "wav", "flac", "ogg"] } # pour le décodage

# Extra
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
iced_aw = "0.14.1"
